--- a/content/exponents.html
+++ b/content/exponents.html
@@ -17,16 +17,14 @@
 <table class="student-info"></table>
 <div class="main">
 
-<h2>Exponents are VERY IMPORTANT for Bases problems.</h2>
+<h2>Exponents are VERY IMPORTANT for Bases Problems.</h2>
 
 <p> Example: \( 4^3 \) means \( 4 \times 4 \times 4 = 64\) </p>
 
 <ol>
-
-<li> \( 3^2 \) means __________________ <span class="equation" ans="!3**2"></span></li>
-<li> \( 2^3 \) means __________________ <span class="equation" ans="!2**3"></span></li>
-<li> \( 2^4 \) means __________________ <span class="equation" ans="!2**4"></span></li>
-
+<li> \( 3^2 \) means __________________ <span class="expression" exp=" = @prn(3**2)" ></span></li>
+<li> \( 2^3 \) means __________________ <span class="expression" exp=" = @prn(2**3)" ></span></li>
+<li> \( 2^4 \) means __________________ <span class="expression" exp=" = @prn(2**4)" ></span></li>
 </ol>
 
 <p> What does: \( 4^0 \) mean? </p>
@@ -36,43 +34,43 @@
 <h2> Practice</h2>
 <p>Fill in the series</p>
 <ol>
-<li class="series" data='{len:5, exp:"3^{n} = ", ans:"!3**n"}'  ></li>
-<li class="series" data='{len:4, exp:"4^{n} = ", ans:"!4**n"}'  ></li>
-<li class="series" data='{len:7, exp:"2^{n} = ", ans:"!2**n"}'  ></li>
-<li class="series" data='{len:4, exp:"5^{n} = ", ans:"!5**n"}'  ></li>
-<li class="series" data='{len:4, exp:"8^{n} = ", ans:"!8**n"}'  ></li>
-<li class="series" data='{len:4, exp:"6^{n} = ", ans:"!6**n"}'  ></li>
-<li class="series" data='{len:4, exp:"10^{n} = ", ans:"!10**n", blank:5 }'></li>
-<li class="series" data='{len:4, exp:"7^{n} = ", ans:"!7**n"}'  ></li>
-<li class="series" data='{len:4, exp:"9^{n} = ", ans:"!9**n"}'  ></li>
+<li class="series" len=5 exp="sub('3^{$}', n) = @prn(3**n)" ></li>
+<li class="series" len=4 exp="sub('4^{$}', n) = @prn(4**n)" ></li>
+<li class="series" len=7 exp="sub('2^{$}', n) = @prn(2**n)" ></li>
+<li class="series" len=4 exp="sub('5^{$}', n) = @prn(5**n)" ></li>
+<li class="series" len=4 exp="sub('8^{$}', n) = @prn(8**n)" ></li>
+<li class="series" len=4 exp="sub('6^{$}', n) = @prn(6**n)" ></li>
+<li class="series" len=4 exp="sub('10^{$}',n) = @prn(10**n)" blank=5 ></li>
+<li class="series" len=4 exp="sub('7^{$}', n) = @prn(7**n)" ></li>
+<li class="series" len=4 exp="sub('9^{$}', n) = @prn(9**n)" ></li>
 </ol>
 
 <p> Write each number in the exponent form. For example: 27 = \( 3^3 \). If there is more than one correct answer, write them all.</p>
 
 <table style='width:100%'><tr><td>
 <ol>
-<li class="equation" exp="!10**2" ans="10^2" blank=8></li>
-<li class="equation" exp="!2**6"  ans="2^6 \text{ or } 4^3" blank=8></li>
-<li class="equation" exp="!9**3"  ans="9^3" blank=8></li>
-<li class="equation" exp="!3**2"  ans="3^2 \text{ or } 9^1" blank=8></li>
-<li class="equation" exp="!2**5"  ans="2^5" blank=8></li>
-<li class="equation" exp="!8**3"  ans="8^3" blank=8></li>
-<li class="equation" exp="!5**3"  ans="5^3" blank=8></li>
-<li class="equation" exp="!5**4"  ans="5^4" blank=8></li>
-<li class="equation" exp="!6**3"  ans="6^3" blank=8></li>
+<li class="expression" exp="prn(10**2) = 10^2" ></li>
+<li class="expression" exp="prn(2**6) = @echo('2^6') \text{ or } @echo('4^3')" ></li>
+<li class="expression" exp="prn(9**3) = @echo('9^3')" ></li>
+<li class="expression" exp="prn(3**2) = @echo('3^2') \text{ or } @echo('9^1')" ></li>
+<li class="expression" exp="prn(2**5) = @echo('2^5')" ></li>
+<li class="expression" exp="prn(8**3) = @echo('8^3')" ></li>
+<li class="expression" exp="prn(5**3) = @echo('5^3')" ></li>
+<li class="expression" exp="prn(5**4) = @echo('5^4')" ></li>
+<li class="expression" exp="prn(6**3) = @echo('6^3')" ></li>
 </ol>
 
 </td><td>
 <ol>
-<li class="equation" exp="!2**3" ans="2^3" blank=8></li>
-<li class="equation" exp="!5**2" ans="5^2" blank=8></li>
-<li class="equation" exp="!3**5" ans="3^5" blank=8></li>
-<li class="equation" exp="!2**8" ans="2^8 \text{ or } 4^4" blank=8></li>
-<li class="equation" exp="!6**2" ans="6^2" blank=8></li>
-<li class="equation" exp="!3**4" ans="3^4 \text{ or } 9^2" blank=8></li>
-<li class="equation" exp="!7**2" ans="7^2" blank=8></li>
-<li class="equation" exp="!9**3" ans="9^3" blank=8></li>
-<li class="equation" exp="!7**3" ans="7^3" blank=8></li>
+<li class="expression" exp="prn(2**3) = @echo('2^3')" ></li>
+<li class="expression" exp="prn(5**2) = @echo('5^2')" ></li>
+<li class="expression" exp="prn(3**5) = @echo('3^5')" ></li>
+<li class="expression" exp="prn(2**8) = @echo('2^8') \text{ or } @echo('4^4')" ></li>
+<li class="expression" exp="prn(6**2) = @echo('6^2')" ></li>
+<li class="expression" exp="prn(3**4) = @echo('3^4') \text{ or } @echo('9^2')" ></li>
+<li class="expression" exp="prn(7**2) = @echo('7^2')" ></li>
+<li class="expression" exp="prn(9**3) = @echo('9^3')" ></li>
+<li class="expression" exp="prn(7**3) = @echo('7^3')" ></li>
 </ol>
 
 </td></tr></table>
@@ -81,28 +79,28 @@
 
 <table style='width:100%'><tr><td>
 <ol>
-<li class="equation" exp="6^3" ans="!6**3"></li>
-<li class="equation" exp="4^4" ans="!4**4"></li>
-<li class="equation" exp="7^3" ans="!7**3"></li>
-<li class="equation" exp="2^7" ans="!2**7"></li>
-<li class="equation" exp="2^9" ans="!2**9"></li>
-<li class="equation" exp="4^5" ans="!4**5"></li>
-<li class="equation" exp="5^5" ans="!5**5"></li>
-<li class="equation" exp="8^4" ans="!8**4"></li>
-<li class="equation" exp="5^0" ans="!5**0"></li>
+<li class="expression" exp="6^3 = @prn(6**3)"></li>
+<li class="expression" exp="4^4 = @prn(4**4)"></li>
+<li class="expression" exp="7^3 = @prn(7**3)"></li>
+<li class="expression" exp="2^7 = @prn(2**7)"></li>
+<li class="expression" exp="2^9 = @prn(2**9)"></li>
+<li class="expression" exp="4^5 = @prn(4**5)"></li>
+<li class="expression" exp="5^5 = @prn(5**5)"></li>
+<li class="expression" exp="8^4 = @prn(8**4)"></li>
+<li class="expression" exp="5^0 = @prn(5**0)"></li>
 </ol>
 
 </td><td>
 <ol>
-<li class="equation" exp="3^5"  ans="!3**5" ></li>
-<li class="equation" exp="4^6"  ans="!4**6" ></li>
-<li class="equation" exp="7^4"  ans="!7**4" ></li>
-<li class="equation" exp="5^4"  ans="!5**4" ></li>
-<li class="equation" exp="15^0" ans="!15**0"></li>
-<li class="equation" exp="3^6"  ans="!3**6" ></li>
-<li class="equation" exp="11^2" ans="!11**2"></li>
-<li class="equation" exp="9^3"  ans="!9**3" ></li>
-<li class="equation" exp="12^2" ans="!12**2"></li>
+<li class="expression" exp="3^5 = @prn(3**5)" ></li>
+<li class="expression" exp="4^6 = @prn(4**6)" ></li>
+<li class="expression" exp="7^4 = @prn(7**4)" ></li>
+<li class="expression" exp="5^4 = @prn(5**4)" ></li>
+<li class="expression" exp="15^0 = @prn(15**0)" ></li>
+<li class="expression" exp="3^6 = @prn(3**6)" ></li>
+<li class="expression" exp="11^2 = @prn(11**2)" ></li>
+<li class="expression" exp="9^3 = @prn(9**3)" ></li>
+<li class="expression" exp="12^2 = @prn(12**2)" ></li>
 </ol>
 
 </td></tr></table>
