--- a/content/exponents.html
+++ b/content/exponents.html
@@ -79,28 +79,28 @@
 
 <table style='width:100%'><tr><td>
 <ol>
-<li class="expression" exp="6^3 = _prn(6**3)"></li>
-<li class="expression" exp="4^4 = _prn(4**4)"></li>
-<li class="expression" exp="7^3 = _prn(7**3)"></li>
-<li class="expression" exp="2^7 = _prn(2**7)"></li>
-<li class="expression" exp="2^9 = _prn(2**9)"></li>
-<li class="expression" exp="4^5 = _prn(4**5)"></li>
-<li class="expression" exp="5^5 = _prn(5**5)"></li>
-<li class="expression" exp="8^4 = _prn(8**4)"></li>
-<li class="expression" exp="5^0 = _prn(5**0)"></li>
+<li class="expression" exp="6^3 = _prn(6**3)" blank=8></li>
+<li class="expression" exp="4^4 = _prn(4**4)" blank=8></li>
+<li class="expression" exp="7^3 = _prn(7**3)" blank=8></li>
+<li class="expression" exp="2^7 = _prn(2**7)" blank=8></li>
+<li class="expression" exp="2^9 = _prn(2**9)" blank=8></li>
+<li class="expression" exp="4^5 = _prn(4**5)" blank=8></li>
+<li class="expression" exp="5^5 = _prn(5**5)" blank=8></li>
+<li class="expression" exp="8^4 = _prn(8**4)" blank=8></li>
+<li class="expression" exp="5^0 = _prn(5**0)" blank=8></li>
 </ol>
 
 </td><td>
 <ol>
-<li class="expression" exp="3^5 = _prn(3**5)" ></li>
-<li class="expression" exp="4^6 = _prn(4**6)" ></li>
-<li class="expression" exp="7^4 = _prn(7**4)" ></li>
-<li class="expression" exp="5^4 = _prn(5**4)" ></li>
-<li class="expression" exp="15^0 = _prn(15**0)" ></li>
-<li class="expression" exp="3^6 = _prn(3**6)" ></li>
-<li class="expression" exp="11^2 = _prn(11**2)" ></li>
-<li class="expression" exp="9^3 = _prn(9**3)" ></li>
-<li class="expression" exp="12^2 = _prn(12**2)" ></li>
+<li class="expression" exp="3^5 = _prn(3**5)" blank=8></li>
+<li class="expression" exp="4^6 = _prn(4**6)" blank=8></li>
+<li class="expression" exp="7^4 = _prn(7**4)" blank=8></li>
+<li class="expression" exp="5^4 = _prn(5**4)" blank=8></li>
+<li class="expression" exp="15^0 = _prn(15**0)" blank=8></li>
+<li class="expression" exp="3^6 = _prn(3**6)" blank=8></li>
+<li class="expression" exp="11^2 = _prn(11**2)" blank=8></li>
+<li class="expression" exp="9^3 = _prn(9**3)" blank=8></li>
+<li class="expression" exp="12^2 = _prn(12**2)" blank=8></li>
 </ol>
 
 </td></tr></table>
