--- a/content/test.html
+++ b/content/test.html
@@ -12,7 +12,7 @@
 
 <body>
 
-<h1>Devotion Math League Bases: Week 1</h1>
+<h1>Devotion Math League Bases: Test</h1>
 
 <table class="student-info"></table>
 <div class="main">
@@ -43,11 +43,19 @@
 
 <table class="base-chart" num=213_4 top=both bottom=answer > </table>
 
+<p class="expression" exp="longadd(['55_6', '14_5', 20], 6)"></p>
+<p class="expression" exp="longadd(['55_6', '14_5', 20], 6)"></p>
 
+
+<h2> mathjax tests </h2>
+
+<p>Example of Fractions<br></p>
+
+<p>
 \(  
 2 + { 4_{(2)} \over 34_{(3)}} =  
 \)
-<br>
+</p>
 
 \(  
 2 + \cfrac{ 4_{(2)} } {34_{(3)}} =  
@@ -56,13 +64,9 @@
 <p>Example of long addition</p>
 <p>
 
-\( \begin{array}{r}
-
-23_{(4)} \\
-\underline{+12_{(4)}} \\
-101_{(4)}
-
-\end{array} \)
+\(
+\begin{align} 124  \\ \underline{+ \quad 53}  \\ 177  \end{align}
+\)
 
 </p>
 
